@@ -1,3 +1,7 @@
+2025-08-17  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp-test48-session-timeout): Extend test.
+
 2025-08-06  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (tramp-test22-file-times): Adapt test.
